JDK 1.4 compatibility